tests/test163.rael.exp
Error [2:9]: An expression is expected after 'with'
|     with
|         ^
