tests/test163.rael
match 2 {
    with
}